--- a/index.html
+++ b/index.html
@@ -1,211 +1,122 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mangal Mart - Shopping Store</title>
-
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Prime Deals Hub</title>
     <style>
         body {
             margin: 0;
             font-family: Arial, sans-serif;
-            background: #e3e6e6;
+            background: #f3f3f3;
         }
-
-        .logo-header {
+        .header {
             background: #131921;
             color: white;
-            padding: 20px 0;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-        }
-
-        .logo-circle {
-            width: 70px;
-            height: 70px;
-            background: #ff9900;
-            border-radius: 50%;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            margin-right: 12px;
-            box-shadow: 0 2px 6px rgba(0,0,0,0.3);
-        }
-
-        .logo-circle span {
-            font-size: 40px;
+            padding: 18px;
+            text-align: center;
+            font-size: 26px;
             font-weight: bold;
-            color: black;
-            position: relative;
         }
-
-        .logo-circle span::after {
-            content: "👜";
-            font-size: 18px;
-            position: absolute;
-            top: -4px;
-            right: -18px;
-        }
-
-        .brand-name {
-            font-size: 34px;
-            font-weight: bold;
-            letter-spacing: 1px;
-        }
-
-        .sub-header {
+        .search {
             background: #232f3e;
-            color: white;
-            padding: 12px 25px;
+            padding: 10px;
             display: flex;
-            gap: 25px;
-            font-size: 17px;
-            font-weight: 500;
+            justify-content: center;
         }
-
-        .sub-header div:hover {
-            text-decoration: underline;
-            cursor: pointer;
+        .search input {
+            width: 85%;
+            padding: 10px;
+            font-size: 16px;
+            border-radius: 6px;
+            border: none;
         }
-
         .banner img {
             width: 100%;
-            height: 420px;
+            height: 340px;
             object-fit: cover;
         }
-
-        .product-section {
-            padding: 25px;
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
-            gap: 25px;
-        }
-
-        .product-box {
-            background: white;
+        .products {
             padding: 20px;
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
+            gap: 22px;
+        }
+        .box {
+            background: white;
+            padding: 18px;
             border-radius: 10px;
-            box-shadow: 0 2px 8px rgba(0,0,0,0.2);
-            transition: 0.3s ease;
+            box-shadow: 0 2px 8px rgba(0,0,0,0.15);
         }
-
-        .product-box:hover {
-            transform: scale(1.03);
-        }
-
-        .product-box img {
+        .box img {
             width: 100%;
-            height: 220px;
-            border-radius: 8px;
+            height: 210px;
             object-fit: cover;
+            border-radius: 8px;
         }
-
-        .btn {
+        .box h3 {
+            margin-top: 10px;
+            margin-bottom: 8px;
+        }
+        .box a {
             display: inline-block;
-            padding: 9px 15px;
             background: #ff9900;
-            color: black;
-            font-weight: bold;
-            text-decoration: none;
+            padding: 8px 12px;
             border-radius: 6px;
-            margin-top: 8px;
+            font-weight: bold;
+            color: black;
+            text-decoration: none;
         }
-
         .footer {
             background: #131921;
+            padding: 20px;
             color: white;
             text-align: center;
-            padding: 20px;
             margin-top: 40px;
-            font-size: 17px;
         }
     </style>
 </head>
 <body>
+    <div class="header">Prime Deals Hub</div>
 
-    <div class="logo-header">
-        <div class="logo-circle">
-            <span>M</span>
-        </div>
-        <div class="brand-name">Mangal Mart</div>
-    </div>
-
-    <div class="sub-header">
-        <div>Today's Deals</div>
-        <div>Mobiles</div>
-        <div>Fashion</div>
-        <div>Electronics</div>
-        <div>Beauty</div>
-        <div>Home</div>
-        <div>Grocery</div>
+    <div class="search">
+        <input type="text" placeholder="Search products...">
     </div>
 
     <div class="banner">
-        <img src="https://source.unsplash.com/1600x600/?shopping,mall">
+        <img src="https://images.unsplash.com/photo-1519389950473-47ba0277781c" />
     </div>
 
-    <div class="product-section">
-
-        <div class="product-box">
+    <div class="products">
+        <div class="box">
+            <img src="https://images.unsplash.com/photo-1510557880182-3b1bbff6a54f" />
             <h3>Smartphones</h3>
-            <img src="https://source.unsplash.com/500x400/?smartphone,mobile">
-            <p>Latest 2025 Mobile Collection • Up to 45% OFF</p>
-            <a class="btn">Shop Now</a>
+            <p>Latest 2025 Smartphones</p>
+            <a href="YOUR_AFFILIATE_LINK">Buy Now</a>
         </div>
 
-        <div class="product-box">
+        <div class="box">
+            <img src="https://images.unsplash.com/photo-1542291026-7eec264c27ff" />
             <h3>Sports Shoes</h3>
-            <img src="https://source.unsplash.com/500x400/?running-shoes,sneakers">
-            <p>Premium Shoes • Flat 50% OFF</p>
-            <a class="btn">Explore</a>
+            <p>Comfortable & Stylish</p>
+            <a href="YOUR_AFFILIATE_LINK">Check Deal</a>
         </div>
 
-        <div class="product-box">
+        <div class="box">
+            <img src="https://images.unsplash.com/photo-1518444021357-4f6581c0d4bf" />
             <h3>Headphones</h3>
-            <img src="https://source.unsplash.com/500x400/?headphones,music">
-            <p>Wireless Headphones • Best Sound Quality</p>
-            <a class="btn">Buy Now</a>
+            <p>Premium Sound Quality</p>
+            <a href="YOUR_AFFILIATE_LINK">Buy Now</a>
         </div>
 
-        <div class="product-box">
+        <div class="box">
+            <img src="https://images.unsplash.com/photo-1523275335684-37898b6baf30" />
             <h3>Watches</h3>
-            <img src="https://source.unsplash.com/500x400/?watch,luxury-watch">
-            <p>Luxury Watches • Starting from ₹999</p>
-            <a class="btn">View More</a>
+            <p>Stylish & Modern</p>
+            <a href="YOUR_AFFILIATE_LINK">View Item</a>
         </div>
-
-        <div class="product-box">
-            <h3>Laptops</h3>
-            <img src="https://source.unsplash.com/500x400/?laptop,computer">
-            <p>Gaming & Office Laptops • 2025 Models</p>
-            <a class="btn">Check Deals</a>
-        </div>
-
-        <div class="product-box">
-            <h3>Men's Fashion</h3>
-            <img src="https://source.unsplash.com/500x400/?mens-fashion,clothes">
-            <p>Shirts • Hoodies • Jackets • More</p>
-            <a class="btn">See All</a>
-        </div>
-
-        <div class="product-box">
-            <h3>Women's Fashion</h3>
-            <img src="https://source.unsplash.com/500x400/?womens-fashion,dress">
-            <p>Trendy Dresses • Heels • Bags</p>
-            <a class="btn">Shop Now</a>
-        </div>
-
-        <div class="product-box">
-            <h3>Home & Kitchen</h3>
-            <img src="https://source.unsplash.com/500x400/?kitchen,home-decor">
-            <p>Cookware • Decor • Electronics</p>
-            <a class="btn">Discover</a>
-        </div>
-
     </div>
 
-    <div class="footer">© 2025 Mangal Mart | All Rights Reserved</div>
-
+    <div class="footer">© 2025 Prime Deals Hub | Affiliate Store</div>
 </body>
 </html>
