--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 
     <div class="products">
         <div class="box">
-            <img src="https://images.unsplash.com/photo-1510557880182-3b1bbff6a54f" />
+            <img src="https://i.imgur.com/0ZfK8lG.jpg" />
             <h3>Smartphones</h3>
             <p>Latest 2025 Smartphones</p>
             <a href="YOUR_AFFILIATE_LINK">Buy Now</a>
@@ -103,7 +103,7 @@
         </div>
 
         <div class="box">
-            <img src="https://images.unsplash.com/photo-1518444021357-4f6581c0d4bf" />
+            <img src="https://i.imgur.com/DSYPM1u.jpg" />
             <h3>Headphones</h3>
             <p>Premium Sound Quality</p>
             <a href="YOUR_AFFILIATE_LINK">Buy Now</a>
@@ -120,3 +120,4 @@
     <div class="footer">© 2025 Prime Deals Hub | Affiliate Store</div>
 </body>
 </html>
+
