--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 
     <div class="products">
         <div class="box">
-            <img src="https://i.imgur.com/0ZfK8lG.jpg" />
+            <img src="https://th.bing.com/th/id/OPAC.Y27Cv3sztk9bSA474C474?w=220&h=210&c=17&o=5&pid=21.1" />
             <h3>Smartphones</h3>
             <p>Latest 2025 Smartphones</p>
             <a href="YOUR_AFFILIATE_LINK">Buy Now</a>
@@ -120,4 +120,5 @@
     <div class="footer">© 2025 Prime Deals Hub | Affiliate Store</div>
 </body>
 </html>
+
 
