--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="https://ibb.co/DgWPYMg0" />
     <title>Prime Deals Hub</title>
     <style>
         body {
@@ -120,5 +120,6 @@
     <div class="footer">© 2025 Prime Deals Hub | Affiliate Store</div>
 </body>
 </html>
+
 
 
