--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
         </div>
 
         <div class="box">
-            <img src="https://ibb.co/GfySJTC9" />
+            <img src="<a href="https://imgbb.com/"><img src="https://i.ibb.co/Fk2TWV8X/website.jpg" alt="website" border="0"></a>" />
             <h3>Headphones</h3>
             <p>Premium Sound Quality</p>
             <a href="YOUR_AFFILIATE_LINK">Buy Now</a>
@@ -120,6 +120,7 @@
     <div class="footer">© 2025 Prime Deals Hub | Affiliate Store</div>
 </body>
 </html>
+
 
 
 
